<resources>
    <string name="app_name">SEO советы для новичков</string>
    <string name="list_element">List Element</string>
    <string name="main_seo_button">Внешняя оптимизация</string>
    <string name="main_optim_button">Внутренняя оптимизация</string>
    <string name="main_tools_button">Полезные инструменты</string>
    <string name="menu_item_add_advice">Добавить совет</string>
    <string name="menu_item_share">Поделиться</string>
    <string name="menu_item_info">Информация о приложении</string>
    <string name="main_app_name">SEO советы</string>
    <string name="share_advice">Поделиться советом</string>
    <string name="advice_tab_strip_name">"Совет "</string>
    <string name="tools_tab_strip_name">"Инструменты "</string>
    <string name="alert_dialog_add_advice">Добавить свой совет</string>
    <string name="alert_dialog_no_email_client">Не установлены e-mail клиенты.</string>
    <string name="alert_dialog_menu_info_title">Информация о пунктах меню</string>
    <string name="alert_dialog_menu_info_content">Внешняя оптимизация - классическая \"СЕО\" оптимизация с наращиванием ссылочной массы, а так же все меры по оптимизации сайта выполняемые за его пределами\n\nВнутренняя оптимизация - всё что делается в пределах сайта для улучшения его ранжирования. Как правило это улучшение качества контента и юзабилити, исправление технических ошибок\n\nПолезные инструменты - краткое описание must mave инструментов для любого вебмастера и сео оптимизатора</string>
    <string name="alert_dialog_info_content">Программа Seo советы создана разработчиком FalconApps в 2016 году. Связаться с разработчиком можно с помощью формы добавления нового совета или письмом на электронную почту falconappsdev@gmail.com</string>
    <string name="alert_dialog_info_title">Информация о приложении</string>
    <string name="alert_dialog_dev_subject">Новый совет</string>
    <string name="alert_dialog_dev_email">falconappsdev@gmail.com</string>
    <string name="alert_dialog_report_title">"Сообщить об ошибке "</string>
    <string name="alert_dialog_report_subject">"Ошибка в совете "</string>
    <string name="alert_dialog_button_ok">OK</string>
    <string name="menu_fragment_no_data">Данные не доступны</string>
    <string name="info_seo_title">Внешняя оптимизация</string>
    <string name="info_seo_content">Это классическая \"СЕО\" оптимизация с ссылочным продвижением, а так же все меры по оптимизации сайта выполняемые за его пределами</string>
    <string name="info_optim_title">Внутренняя оптимизация</string>
    <string name="info_optim_content">Всё что делается в пределах сайта для улучшения его ранжирования относится к внутренней оптимизации. Как правило это улучшение качества контента и юзабилити</string>
    <string name="info_tools_title">Бесплатные инструменты</string>
    <string name="info_tools_content">Краткое описание must mave инструментов для любого вебмастера и сео оптимизатора</string>
    <string name="menu_item_report">Сообщить об ошибке</string>
    <string name="banner_ad_unit_id_main">ca-app-pub-6834005874422488/7051671053</string>
    <string name="banner_ad_unit_id_menu">ca-app-pub-6834005874422488/1423939850</string>
    <string name="banner_ad_unit_id_advice">ca-app-pub-6834005874422488/8528404252</string>
</resources>