<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:com.litvinenko.megabook="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/miAddAdvice"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/menu_item_add_advice"
        com.litvinenko.megabook:showAsAction="ifRoom"/>

    <item
        android:id="@+id/miShare"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/menu_item_share"
        com.litvinenko.megabook:showAsAction="ifRoom"/>

    <item
        android:id="@+id/miReport"
        android:icon="@android:drawable/ic_dialog_alert"
        android:title="@string/menu_item_report"
        com.litvinenko.megabook:showAsAction="ifRoom"/>

    <item
        android:id="@+id/miAppInfo"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_item_info"
        com.litvinenko.megabook:showAsAction="ifRoom"/>
</menu>