<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#004581">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingTop="100dp"
        android:background="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp" />

    <LinearLayout
        android:layout_below="@+id/ivLogo"
        android:id="@+id/llMainTextContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/main_app_name"
        android:textColor="#dde8f0"
        android:textSize="38sp"
        android:textAlignment="center"/>

</LinearLayout>

    <RelativeLayout
        android:id="@+id/rlMainButtonsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llMainTextContainer"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btnMainSeo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingLeft="20dp"
            android:background="@drawable/btn1"
            android:text="@string/main_seo_button"
            android:textSize="16sp"
            android:textColor="#dde8f0"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">
        </Button>

        <Button
            android:id="@+id/btnMainOptim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingLeft="20dp"
            android:background="@drawable/btn2"
            android:text="@string/main_optim_button"
            android:textSize="16sp"
            android:textColor="#dde8f0"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/btnMainSeo"
            android:layout_marginTop="10dp">
        </Button>

        <Button
            android:id="@+id/btnMainTools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingLeft="20dp"
            android:background="@drawable/btn3"
            android:text="@string/main_tools_button"
            android:textSize="16sp"
            android:textColor="#dde8f0"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/btnMainOptim"
            android:layout_marginTop="10dp">
        </Button>

</RelativeLayout>

<LinearLayout
    android:id="@+id/llAdmobMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:paddingBottom="15dp">

    <!--<com.google.android.gms.ads.AdView-->
        <!--android:id="@+id/adView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--ads:adSize="BANNER"-->
        <!--ads:adUnitId="@string/banner_ad_unit_id_main">-->
    <!--</com.google.android.gms.ads.AdView>-->

</LinearLayout>

</RelativeLayout>
